Fixed team mini nav on mobile

--- a/src/app/team-view/team-view.component.css
+++ b/src/app/team-view/team-view.component.css
@@ -41,6 +41,11 @@
     /* padding-left: 15%; */
 }
 
+#emptyHeart:hover
+{
+  cursor: pointer;
+}
+
 #teamName h1
 {
   font-size: 1em;
